<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data class="EntranceBinding">
        <variable
            name="presenter"
            type="gigster.com.holdsum.presenters.EntrancePresenter"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".activities.EntranceActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/start_pic"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/holdsum_logo" />

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_screen_message"
            android:minHeight="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button android:id="@+id/borrow_money"
                style="@style/ColoredButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:onClick="@{() -> presenter.onClickBorrow()}"
                android:text="@string/borrow_capitalized"/>

        </LinearLayout>

        <Button android:id="@+id/login_button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="@{() -> presenter.onClickLogin()}"
            android:text="@string/log_in" />

    </LinearLayout>
</layout>